# baby-monitor-motherboard

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/bluetooth_logger/: bluetooth_logger.cpp  bluetooth_logger.h
src/camera/: camera.cpp  camera.h
src/log_hook/: log_hook.cpp  log_hook.h
src/log_storer/: log_storer.cpp  log_storer.h
