cmake_minimum_required(VERSION 3.12)
project(PiCapture)
set(CMAKE_CXX_STANDARD 20)
set(COMPILE_DEFINITIONS -O2 -Wall)
find_package(OpenCV REQUIRED)
add_executable(PiCapture src/main.cpp)
target_link_libraries(PiCapture ${OpenCV_LIBS})
add_subdirectory(lib/bluez_inc)
target_link_libraries(PiCapture ${OpenCV_LIBS} Binc)
target_include_directories(PiCapture PRIVATE lib/bluez_inc/binc ${GLIB_INCLUDE_DIRS})

